--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
   },
   "scripts": {
     "build": "ray build -e dist",
-    "dev": "ray develop"
+    "dev": "ray develop",
+    "publish": "npx @raycast/api@latest publish",
+    "fix-lint": "ray lint --fix",
+    "lint": "ray lint"
   }
 }
