--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
   ],
   "dependencies": {
     "@raycast/api": "1.79.1",
-    "js-base64": "3.7.7",
-    "run-applescript": "7.0.0"
+    "js-base64": "3.7.7"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^1.0.8",
